--- a/sage_deployment_pipeline.ipynb
+++ b/sage_deployment_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "1230b0bb-0955-435b-b732-18531a286c84",
    "metadata": {
     "tags": []
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "id": "83fb5c3a-fb89-46eb-80ec-c5f37c1a2215",
    "metadata": {
     "tags": []
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "id": "abd14087-442e-450d-a183-67aca614d3f8",
    "metadata": {
     "tags": []
@@ -42,7 +42,7 @@
    "source": [
     "sagemaker_bucket_name = \"hemz-sagemaker-bucket\"\n",
     "\n",
-    "inference_image_uri = \"654654222480.dkr.ecr.ap-south-1.amazonaws.com/demo_prophet:latest\"\n",
+    "inference_image_uri = \"654654222480.dkr.ecr.ap-south-1.amazonaws.com/prophet_infernece:latest\"\n",
     "\n",
     "model_name = \"Prophet-serverless-model\" + \"-\" + strftime(\"%Y%m%d%H%M%S\", gmtime())\n",
     "\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "id": "7b020d85-15f6-467f-85d3-1c94f1a20a55",
    "metadata": {
     "tags": []
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "c649d761-3caa-47f2-b3cd-8ef9c0e8ad65",
    "metadata": {
     "tags": []
@@ -83,17 +83,17 @@
     {
      "data": {
       "text/plain": [
-       "{'ModelArn': 'arn:aws:sagemaker:ap-south-1:654654222480:model/Prophet-serverless-model-20240818072434',\n",
-       " 'ResponseMetadata': {'RequestId': 'd590bdec-2d73-4919-8f89-a824d11050b5',\n",
+       "{'ModelArn': 'arn:aws:sagemaker:ap-south-1:654654222480:model/Prophet-serverless-model-20240818104316',\n",
+       " 'ResponseMetadata': {'RequestId': '2083eef0-6675-4171-9b78-58c44c956ef4',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'd590bdec-2d73-4919-8f89-a824d11050b5',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '2083eef0-6675-4171-9b78-58c44c956ef4',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '102',\n",
-       "   'date': 'Sun, 18 Aug 2024 07:24:36 GMT'},\n",
+       "   'date': 'Sun, 18 Aug 2024 10:43:16 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
     "    ModelName=model_name,\n",
     "    ExecutionRoleArn=role,\n",
     "    Containers=[{\n",
-    "        \"Image\": custom_image_uri,\n",
+    "        \"Image\": inference_image_uri,\n",
     "        \"Mode\": \"SingleModel\",\n",
     "        \"ModelDataUrl\": f's3://{sagemaker_bucket_name}/output-data/model-artifacts/{latest_training_job_name}/output/model.tar.gz'\n",
     "    }]\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "a62ef20d-7947-45fd-803e-a435053efba4",
    "metadata": {},
    "outputs": [],
@@ -123,10 +123,10 @@
     "   EndpointConfigName=\"prophet-endpoint-config\",\n",
     "   ProductionVariants=[\n",
     "        {\n",
-    "            \"ModelName\": \"pipelines-a267zynpnsct-CreateModel-CreateMo-RnIsVnjWsV\",\n",
+    "            \"ModelName\": model_name,\n",
     "            \"VariantName\": \"AllTraffic\",\n",
     "            \"ServerlessConfig\": {\n",
-    "                 \"MemorySizeInMB\": 2048,\n",
+    "                \"MemorySizeInMB\": 2048,\n",
     "                \"MaxConcurrency\": 1,\n",
     "                \"ProvisionedConcurrency\": 1,\n",
     "            }\n",
@@ -137,10 +137,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "a5fb702a-4c35-4ac4-ae5b-92c47d5fc469",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'EndpointArn': 'arn:aws:sagemaker:ap-south-1:654654222480:endpoint/prophet-endpoint',\n",
+       " 'ResponseMetadata': {'RequestId': '80489051-cb70-4600-af7a-d6511b313706',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '80489051-cb70-4600-af7a-d6511b313706',\n",
+       "   'content-type': 'application/x-amz-json-1.1',\n",
+       "   'content-length': '85',\n",
+       "   'date': 'Sun, 18 Aug 2024 10:43:17 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create the endpoint\n",
     "sm_client.create_endpoint(\n",
@@ -148,6 +166,14 @@
     "    EndpointConfigName=endpoint_config_name\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f09077f4-4412-4461-928a-1fdef0e98714",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
